--- a/7/leung_alvin/3-madlibs/templates/madlibs.html
+++ b/7/leung_alvin/3-madlibs/templates/madlibs.html
@@ -1,3 +1,38 @@
 <h1>Madlibs</h1>
 
-One day {{name}} was walking in the {{place}}
+
+Our whole {{noun1}} was in a {{adj1}} {{adj2}} state,
+Then {{adverb1}} fourteen billion {{noun2}} ago expansion started. Wait...
+The Earth began to cool,
+The {{noun3}} began to {{verb1}},
+Neanderthals developed {{noun4}},
+We {{verb2}} a wall (we built the pyramids),
+Math, science, {{noun5}}, unraveling the mysteries,
+That all started with the {{adj3}} bang!
+
+Since the dawn of man is {{adverb2}} not that {{adj4}},
+As {{adj5}} galaxy was formed in less time than it takes to {{verb3}} this song.
+A fraction of a second and the elements were made.
+The bipeds stood up {{adj5}},
+The dinosaurs all met their fate,
+{{pro1}} tried to leap but {{pro1}} were late
+And {{pro1}} died ({{pro1}} froze their {{noun6}} off)
+The oceans and Pangea
+See ya wouldn't wanna be ya
+Set in motion by the same big {{noun7}}!
+
+It all started with the big BANG!
+
+It's expanding ever outward but one day
+It will pause and start to go the other way,
+Collapsing ever inward, we won't be here, it won't be heard
+Our best and {{adj6}} figure that it'll make an even {{adj7}} bang!
+
+{{name1}} would {{adverb3}} have been sick of {{pro2}}
+Debating how we're here, they're catching deer (we're catching viruses)
+Religion or astronomy ({{name2}} or Deuteronomy)
+It all started with the big bang!
+
+Music and mythology, {{name3}} and astrology
+It all started with the big bang!
+It all started with the big BANG!
