--- a/7/leung_alvin/3-madlibs/templates/madlibs.html
+++ b/7/leung_alvin/3-madlibs/templates/madlibs.html
@@ -1,5 +1,10 @@
 <h1>Madlibs</h1>
 
+<a href = "http://localhost:5000/">Back to Home Page</a><br>
+<a href = "http://localhost:5000/madlibs">Refresh</a><br><br>
+
+<font size="1">Please ignore how little sense this makes</font>
+<br><br>
 
 Our {{noun1}} were in a {{adj1}} {{adj2}} state, <br>
 Then {{adverb1}} fourteen billion {{noun2}} ago expansion started. Wait... <br>
@@ -11,9 +16,9 @@ Math, science, {{noun5}}, unraveling the mysteries, <br>
 That all started with the {{adj3}} bang! <br>
 <br>
 Since the dawn of man is {{adverb2}} not that {{adj4}}, <br>
-As {{adj5}} galaxy was formed in less time than it takes to {{verb3}} this song. <br>
+As every galaxy was formed in less time than it takes to {{verb3}} this song. <br>
 A fraction of a second and the elements were made. <br>
-The bipeds stood up {{adj5}}, <br>
+The bipeds stood up {{adverb3}}, <br>
 The dinosaurs all met their fate, <br>
 {{pro1}} tried to leap but {{pro1}} were late <br>
 And {{pro1}} died ({{pro1}} froze their {{noun6}} off) <br>
@@ -26,9 +31,9 @@ It all started with the big BANG! <br>
 It's expanding ever outward but one day <br>
 It will pause and start to go the other way, <br>
 Collapsing ever inward, we won't be here, it won't be heard <br>
-Our best and {{adj6}} figure that it'll make an even {{adj7}} bang! <br>
+Our best and {{adj6}} figure that it'll make a {{adj7}} bang! <br>
 <br>
-{{name1}} would {{adverb3}} have been sick of {{pro2}} <br>
+{{name1}} would {{adverb4}} have been sick of {{pro2}} <br>
 Debating how we're here, they're catching deer (we're catching viruses) <br>
 Religion or astronomy ({{name2}} or Deuteronomy) <br>
 It all started with the big bang! <br>
