--- a/7/dai_nancy/madlibs/templates/home.html
+++ b/7/dai_nancy/madlibs/templates/home.html
@@ -1,1 +1,22 @@
-<h1> This is the html </h1>
+<h1> Kitty and Tiger's Demented Pokemon Story </h1>
+<br>
+<h2>{{name1}}'s Epic Journey<h2>
+
+<p>Once upon a time, {{title}} {{name1}} was an aspiring Pokemon trainer from
+{{location}}. {{pronoun1}} was a {{adjective1}} 10 year old, eager to see the
+world outside {{location}}. </p>
+
+<p>On a {{adjective2}} day, {{name1}} woke up late, and had to {{verb1}} over 
+to the Pokemon lab. Unfortunately, {{name2}}, his rival stole his favorite 
+Pokemon {{pokemon1}}. With no other choice, he had to take the last Pokemon,
+{{pokemon2}}. </p> 
+
+<p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
+{{pronoun2}} {{nickname}}. However, {{pronoun2}} was  merely level {{level}}.
+When {{name2}} sent out his {{pokemon1}} to battle, {{nickname}} was
+{{adjective3}} defeated.</p>
+
+<p>{{name1}} was so depressed by the defeat that {{pronoun1}} tried to
+{{verb2}} {{adverb}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
+outide of {{location}}, waiting to {{verb3}} {{title}} Red. {{nickname}} still
+sucked.</p>
