--- a/7/dai_nancy/madlibs/templates/madlibs.html
+++ b/7/dai_nancy/madlibs/templates/madlibs.html
@@ -2,21 +2,26 @@
 <br>
 <h2>{{name1}}'s Epic Journey<h2>
 
-<p>Once upon a time, {{title}} {{name1}} was an aspiring Pokemon trainer from
-{{location}}. {{pronoun1}} was a {{adjective1}} 10 year old, eager to see the
-world outside {{location}}. </p>
+<p>Once upon a time, {{title1}} {{name1}} was an aspiring Pokemon trainer from
+{{location1}}. {{pronoun1}} was a {{adjective1}} 10 year old, eager to see the
+world outside {{location1}}. </p>
 
 <p>On a {{adjective2}} day, {{name1}} woke up late, and had to {{verb1}} over 
-to the Pokemon lab. Unfortunately, {{name2}}, his rival stole his favorite 
-Pokemon {{pokemon1}}. With no other choice, he had to take the last Pokemon,
-{{pokemon2}}. </p> 
+to the Pokemon lab. Unfortunately,{{title2}} {{name2}}, his rival stole his
+favorite Pokemon {{pokemon1}}. With no other choice, he had to take the last
+Pokemon, {{pokemon2}}. </p> 
 
 <p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
-{{pronoun2}} {{nickname}}. However, {{pronoun2}} was  merely level {{level}}.
-When {{name2}} sent out his {{pokemon1}} to battle, {{nickname}} was
-{{adjective3}} defeated.</p>
+{{pronoun2}} {{nickname1}}. However, {{pronoun2}} was merely level {{level}}. 
+{{name1}} wasn't very pleased with {{nickname1}} and would spend days trying
+to teach {{pronoun2}} how to {{verb2}} in {{location 2}}.</p>
+
+<p>One {{adjective3}} morning, {{name1}} bumped into {{name2}} in
+{{location3}}. The two of them wanted to have a {{adjective4}} Pokemon
+battle. When {{name2}} sent out {{nickname2}}, his level {{level2}}
+{{pokemon1}}, {{nickname}} was {{adverb1}} defeated.</p>
 
 <p>{{name1}} was so depressed by the defeat that {{pronoun1}} tried to
-{{verb2}} {{adverb}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
-outide of {{location}}, waiting to {{verb3}} {{title}} Red. {{nickname}} still
-sucked.</p>
+{{verb3}} {{adverb2}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
+outide of {{location4}}, waiting to {{verb3}} {{title3}} Red. {{nickname1}}
+still sucked.</p>
