--- a/7/dai_nancy/madlibs/templates/madlibs.html
+++ b/7/dai_nancy/madlibs/templates/madlibs.html
@@ -3,8 +3,8 @@
 <h2>{{name1}}'s Epic Journey<h2>
 
 <p>Once upon a time, {{title1}} {{name1}} was an aspiring Pokemon trainer from
-{{location1}}. {{pronoun1}} was a {{adjective1}} 10 year old, eager to see the
-world outside {{location1}}. </p>
+{{location1}}. As a {{adjective1}} 10 year old, {{pronoun1}} was 
+eager to see the world outside {{location1}}. </p>
 
 <p>On a {{adjective2}} day, {{name1}} woke up late, and had to {{verb1}} over 
 to the Pokemon lab. Unfortunately,{{title2}} {{name2}}, his rival stole his
