--- a/7/dai_nancy/3-madlibs/templates/madlibs.html
+++ b/7/dai_nancy/3-madlibs/templates/madlibs.html
@@ -12,14 +12,14 @@ favorite Pokemon {{pokemon1}}. With no other choice, he had to take the last
 Pokemon, {{pokemon2}}. </p> 
 
 <p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
-{{pronoun2}} {{nickname1}}. However, {{pronoun2}} was merely level {{level}}. 
+{{pronoun2}} {{nickname1}}. However, {{pronoun2}} was merely level {{level1}}. 
 {{name1}} wasn't very pleased with {{nickname1}} and would spend days trying
 to teach {{pronoun2}} how to {{verb2}} in {{location 2}}.</p>
 
 <p>One {{adjective3}} morning, {{name1}} bumped into {{name2}} in
 {{location3}}. The two of them wanted to have a {{adjective4}} Pokemon
 battle. When {{name2}} sent out {{nickname2}}, his level {{level2}}
-{{pokemon1}}, {{nickname}} was {{adverb1}} defeated.</p>
+{{pokemon1}}, {{nickname1}} was {{adverb1}} defeated.</p>
 
 <p>{{name1}} was so depressed by the defeat that {{pronoun1}} tried to
 {{verb3}} {{adverb2}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
