--- a/7/dai_nancy/3-madlibs/templates/madlibs.html
+++ b/7/dai_nancy/3-madlibs/templates/madlibs.html
@@ -7,8 +7,8 @@
 eager to see the world outside {{location1}}. </p>
 
 <p>On a {{adjective2}} day, {{name1}} woke up late, and had to {{verb1}} over 
-to the Pokemon lab. Unfortunately,{{title2}} {{name2}}, his rival stole his
-favorite Pokemon {{pokemon1}}. With no other choice, he had to take the last
+to the Pokemon lab. Unfortunately, {{title2}} {{name2}}, his rival stole his
+favorite Pokemon, {{pokemon1}}. With no other choice, he had to take the last
 Pokemon, {{pokemon2}}. </p> 
 
 <p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
