--- a/7/dai_nancy/3-madlibs/templates/madlibs.html
+++ b/7/dai_nancy/3-madlibs/templates/madlibs.html
@@ -1,6 +1,6 @@
 <h1> Kitty and Tiger's Demented Pokemon Story </h1>
 <br>
-<h2>{{name1}}'s Epic Journey<h2>
+<h2>{{name1}}'s Epic Journey</h2>
 
 <p> Once upon a time, {{title1}} {{name1}} was an aspiring Pokemon trainer from
 {{location1}}. As a {{adjective1}} 10 year old, {{pronoun1}} was 
@@ -12,7 +12,7 @@ favorite Pokemon, {{pokemon1}}. With no other choice, he had to take the last
 Pokemon, {{pokemon2}}. </p> 
 
 <p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
-{{pronoun1}} {{pokemon2}} {{nickname1}}. However, {{pronoun2}} was merely level
+the {{pokemon2}} {{nickname1}}. However, {{pronoun2}} was merely level
 {{level1}}. {{name1}} wasn't very pleased with {{nickname1}} and would spend
 days trying to teach {{pronoun2}} how to {{verb2}} in {{location2}}.</p>
 
