--- a/7/dai_nancy/3-madlibs/templates/madlibs.html
+++ b/7/dai_nancy/3-madlibs/templates/madlibs.html
@@ -14,7 +14,7 @@ Pokemon, {{pokemon2}}. </p>
 <p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
 the {{pokemon2}} {{nickname1}}. However, {{pronoun2}} was merely level
 {{level1}}. {{name1}} wasn't very pleased with {{nickname1}} and would spend
-days trying to teach {{pronoun2}} how to {{verb2}} in {{location2}}.</p>
+days trying to teach {{nickname1}} how to {{verb2}} in {{location2}}.</p>
 
 <p>One {{adjective3}} morning, {{name1}} bumped into {{name2}} in
 {{location3}}. The two of them wanted to have a {{adjective4}} Pokemon
@@ -23,5 +23,5 @@ battle. When {{name2}} sent out {{nickname2}}, his level {{level2}}
 
 <p>{{name1}} was so depressed by the defeat that {{pronoun1}} tried to
 {{verb3}} {{adverb2}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
-outide of {{location4}}, waiting to {{verb3}} {{title3}} Red. {{nickname1}}
+outside of {{location4}}, waiting to {{verb3}} {{title3}} Red. {{nickname1}}
 still sucked.</p>
