--- a/7/dai_nancy/3-madlibs/templates/madlibs.html
+++ b/7/dai_nancy/3-madlibs/templates/madlibs.html
@@ -7,21 +7,22 @@
 eager to see the world outside {{location1}}. </p>
 
 <p>On a {{adjective2}} day, {{name1}} woke up late, and had to {{verb1}} over 
-to the Pokemon lab. Unfortunately, {{title2}} {{name2}}, his rival stole his
-favorite Pokemon, {{pokemon1}}. With no other choice, he had to take the last
-Pokemon, {{pokemon2}}. </p> 
+to the Pokemon lab. Unfortunately, {{title2}} {{name2}}, the childhood rival,
+stole {{name1}}'s favorite Pokemon, {{pokemon1}}. With no other
+choice, {{pronoun1}} had to take the last Pokemon, {{pokemon2}}. </p> 
 
 <p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
 the {{pokemon2}} {{nickname1}}. However, {{pronoun2}} was merely level
-{{level1}}. {{name1}} wasn't very pleased with {{nickname1}} and would spend
-days trying to teach {{nickname1}} how to {{verb2}} in {{location2}}.</p>
+{{level1}}. {{name1}} wasn't very pleased with {{nickname1}} and {{pronoun1}}
+would spend days trying to teach {{nickname1}} how to {{verb2}} in 
+{{location2}}.</p>
 
-<p>One {{adjective3}} morning, {{name1}} bumped into {{name2}} in
-{{location3}}. The two of them wanted to have a {{adjective4}} Pokemon
-battle. When {{name2}} sent out {{nickname2}}, his level {{level2}}
+<p>One {{adjective4}} morning, {{name1}} bumped into {{name2}} in
+{{location3}}. The two of them wanted to have a {{adjective5}} Pokemon
+battle. When {{name2}} sent out {{nickname2}}, a level {{level2}}
 {{pokemon1}}, {{nickname1}} was {{adverb1}} defeated.</p>
 
 <p>{{name1}} was so depressed by the defeat that {{pronoun1}} tried to
 {{verb3}} {{adverb2}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
-outside of {{location4}}, waiting to {{verb3}} {{title3}} Red. {{nickname1}}
+outside of {{location4}}, waiting to {{verb4}} {{title3}} Red. {{nickname1}}
 still sucked.</p>
