--- a/7/lin_michele/3-madlibs/templates/madlibs.html
+++ b/7/lin_michele/3-madlibs/templates/madlibs.html
@@ -1,28 +1,38 @@
-<h1> Kitty and Tiger's Demented Pokemon Story </h1>
-<br>
-<h2>{{name1}}'s Epic Journey</h2>
+<!DOCTYPE html>
+<htmL>
+  <head>
+    <title>Mad Libs</title>
+  </head>
+  
+  <body style="background-color:#35C0CD">
+    <h1 style="text-align:center"> Kitty and Tiger's Demented Pokemon Story </h1>
+    <br>
+    <h2 style="text-align:center">{{name1}}'s Epic Journey</h2>
 
-<p> Once upon a time, {{title1}} {{name1}} was an aspiring Pokemon trainer from
-{{location1}}. As a {{adjective1}} 10 year old, {{pronoun1}} was 
-eager to see the world outside {{location1}}. </p>
+    <p> Once upon a time, {{title1}} {{name1}} was an aspiring Pokemon trainer from
+      {{location1}}. As a {{adjective1}} 10 year old, {{pronoun1}} was 
+      eager to see the world outside {{location1}}. </p>
+    
+    <p>On a {{adjective2}} day, {{name1}} woke up late, and had to {{verb1}} over 
+      to the Pokemon lab. Unfortunately, {{title2}} {{name2}}, the childhood rival,
+      stole {{name1}}'s favorite Pokemon, {{pokemon1}}. With no other
+      choice, {{pronoun1}} had to take the last Pokemon, {{pokemon2}}. </p> 
+    
+    <p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
+      the {{pokemon2}} {{nickname1}}. However, {{pronoun2}} was merely level
+      {{level1}}. {{name1}} wasn't very pleased with {{nickname1}} and {{pronoun1}}
+      would spend days trying to teach {{nickname1}} how to {{verb2}} in 
+      {{location2}}.</p>
+    
+    <p>One {{adjective4}} morning, {{name1}} bumped into {{name2}} in
+      {{location3}}. The two of them wanted to have a {{adjective5}} Pokemon
+      battle. When {{name2}} sent out {{nickname2}}, a level {{level2}}
+      {{pokemon1}}, {{nickname1}} was {{adverb1}} defeated.</p>
+    
+    <p>{{name1}} was so depressed by the defeat that {{pronoun1}} tried to
+      {{verb3}} {{adverb2}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
+      outside of {{location4}}, waiting to {{verb4}} {{title3}} Red. {{nickname1}}
+      still sucked.</p>
+  </body>
 
-<p>On a {{adjective2}} day, {{name1}} woke up late, and had to {{verb1}} over 
-to the Pokemon lab. Unfortunately, {{title2}} {{name2}}, the childhood rival,
-stole {{name1}}'s favorite Pokemon, {{pokemon1}}. With no other
-choice, {{pronoun1}} had to take the last Pokemon, {{pokemon2}}. </p> 
-
-<p>{{pokemon2}} was a {{adjective3}} Pokemon, and {{name1}} promptly named
-the {{pokemon2}} {{nickname1}}. However, {{pronoun2}} was merely level
-{{level1}}. {{name1}} wasn't very pleased with {{nickname1}} and {{pronoun1}}
-would spend days trying to teach {{nickname1}} how to {{verb2}} in 
-{{location2}}.</p>
-
-<p>One {{adjective4}} morning, {{name1}} bumped into {{name2}} in
-{{location3}}. The two of them wanted to have a {{adjective5}} Pokemon
-battle. When {{name2}} sent out {{nickname2}}, a level {{level2}}
-{{pokemon1}}, {{nickname1}} was {{adverb1}} defeated.</p>
-
-<p>{{name1}} was so depressed by the defeat that {{pronoun1}} tried to
-{{verb3}} {{adverb2}}. It didn't work. In the end, {{pronoun1}} {{pastverb}}
-outside of {{location4}}, waiting to {{verb4}} {{title3}} Red. {{nickname1}}
-still sucked.</p>
+</html>
