--- a/6/lu_jasper/3-madlibs/templates/madlibs.html
+++ b/6/lu_jasper/3-madlibs/templates/madlibs.html
@@ -1,3 +1,3 @@
 <h1>Awesome Story</h1>
 
-One day {{l[0]}} was {{l[1]}} through the {{l[2]} There, he found a {{l[3]}} {{l[4]}}.
+One day {{words}} was through the  There, he found a .
