--- a/7/wan_takchi/madlib/templates/story.html
+++ b/7/wan_takchi/madlib/templates/story.html
@@ -1,6 +1,9 @@
-<h1> This is the page to generate funny madlibs </h1>
-
-Hi,
-<p>
-Welcome {{ name }}.
-<p>
+<p> One day, {{dictionary.name}} went to the {{dictionary.place}} airport. Moments before boarding, {{dictionary.thing}} 
+    fell from his bag. He picked it up and {{dictionary.verb}} to the gate. {{dictionary.time}} {{dictionary.timeunit}} passed 
+    and the plane finally lifted off. When the {{dictionary.adj}} flight attendant approached him asking if he
+    wanted something to drink, he reponded with, "I would like {{dictionary.drink}} please." The attendant filled
+    up the cup with {{dictionary.drink}} instead and was about to hand it over, but spilled it all over. At that very 
+    moment, the {{dictionary.adj}} flight captain fell asleep, and so did the co-pilot, so the plane went out of control.
+    {{dictionary.time}} {{dictionary.timeunit}} later, the plane crashed onto an uncharted island. There were {{dictionary.time}} casualties. 
+    At that time, {{dictionary.time}} supposedly extinct creatures surrounded them and ate them all. And then there were none.
+    p.s. There are two references in here! </p>
