--- a/7/wan_takchi/3-madlibs/templates/story.html
+++ b/7/wan_takchi/3-madlibs/templates/story.html
@@ -1,9 +1,9 @@
-<p> One day, {{dictionary.name}} went to the {{dictionary.place}} airport. Moments before boarding, {{dictionary.thing}} 
-    fell from his bag. He picked it up and {{dictionary.verb}} to the gate. {{dictionary.time}} {{dictionary.timeunit}} passed 
-    and the plane finally lifted off. When the {{dictionary.adj}} flight attendant approached him asking if he
-    wanted something to drink, he reponded with, "I would like {{dictionary.drink}} please." The attendant filled
-    up the cup with {{dictionary.drink}} instead and was about to hand it over, but spilled it all over. At that very 
-    moment, the {{dictionary.adj}} flight captain fell asleep, and so did the co-pilot, so the plane went out of control.
-    {{dictionary.time}} {{dictionary.timeunit}} later, the plane crashed onto an uncharted island. There were {{dictionary.time}} casualties. 
-    At that time, {{dictionary.time}} supposedly extinct creatures surrounded them and ate them all. And then there were none.
+<p> One day, {{name}} went to the {{place}} airport. Moments before boarding, {{thing}} 
+    fell from his bag. He picked it up and {{verb}} to the gate. {{time}} {{timeunit}} passed 
+    and the plane finally lifted off. When the {{adj}} flight attendant approached him asking if he
+    wanted something to drink, he reponded with, "I would like {{drink}} please." The attendant filled
+    up the cup with {{drink}} instead and was about to hand it over, but spilled it all over. At that very 
+    moment, the {{adj}} flight captain fell asleep, and so did the co-pilot, so the plane went out of control.
+    {{time}} {{timeunit}} later, the plane crashed onto an uncharted island. There were {{time}} casualties. 
+    At that time, {{time}} supposedly extinct creatures surrounded them and ate them all. And then there were none.
     p.s. There are two references in here! </p>
