working madlibs code

--- a/7/rosenberg_noah/madlibs/templates/madlibs.html
+++ b/7/rosenberg_noah/madlibs/templates/madlibs.html
@@ -2,5 +2,5 @@
 
 One day, {{ proper_noun1 }} was taking a walk in the forest. 
 On his/her way, s/he saw a huge {{ noun1 }} hiding among the trees. 
-It was by far the most {{ adj1 }} that {{ proper_noun1 }} had 
+It was by far the most {{ adj1 }} {{ noun1 }} that {{ proper_noun1 }} had 
 ever seen.
