explained template in comment

--- a/7/field-thompson_will/madlibs/templates/story.html
+++ b/7/field-thompson_will/madlibs/templates/story.html
@@ -1,2 +1,3 @@
+<!--Each variable is a list. Just use [] notation to grab any given word-->
 <h1>CRZY LIBS</h1>
 One day, <b>{{d.names[0]}}</b> <b>{{d.tverbs[0]}}</b> to <b>{{d.places[0]}}</b>.
