--- a/6/ong_timothy/3-madlibs/templates/madlibs.html
+++ b/6/ong_timothy/3-madlibs/templates/madlibs.html
@@ -5,5 +5,9 @@ Welcome to MadLibs!
 <hr>
 
 <font size = 5>
-{{name1}} {{verb1}} some {{noun1}}s.
+
+
+It was a {{ adj1 }} day. {{ name1 }} was {{ adj2 }} so {{ name1 }} asked {{ name2 }} to {{ v1 }} together. {{ name2 }} is a very {{ adj3 }} person and he went along with it. As they headed for the {{ pl1 }} {{ adv1 }}, they found a {{ adj4 }} {{ n1 }} in a {{ pl2 }}. They named the {{ n1 }} {{ name3 }}. {{ name1 }} still wanted to {{ v1 }} so they took {{ name3 }} along. 
+
+
 </font>
