--- a/6/rehab_arfan/template/index.html
+++ b/6/rehab_arfan/template/index.html
@@ -6,9 +6,10 @@
 
 <body>
 
-     <p>One day, {{name}} is {{verb}} in the {{place}}. There he found
-a {{noun}}. </p>
+     <p>One day, {{d.name}} was {{d.verb}} in the {{d.place}}. There he found
+a {{d.noun}}. </p>
 
 </body>
 
 </html>
+
