madlibs basic story

--- a/7/field-thompson_will/madlibs/templates/story.html
+++ b/7/field-thompson_will/madlibs/templates/story.html
@@ -1,3 +1,5 @@
 <!--Each variable is a list. Just use [] notation to grab any given word-->
 <h1>CRZY LIBS</h1>
 One day, <b>{{d.names[0]}}</b> <b>{{d.tverbs[0]}}</b> to <b>{{d.places[0]}}</b>.
+There, he met the <b>{{d.adjectives[0]}}</b> <b>{{d.nouns[0]}}</b>. The <b>{{d.adjectives[0]}}</b> <b>{{d.nouns[0]}}</b> was quite <b>{{d.adjectives[1]}}</b> because its <b>{{d.nouns[1]}}</b> <b>{{d.tverbs[1]}}</b> to <b>{{d.places[1]}}</b>.
+Thankfully, the <b>{{d.adjectives[0]}}</b> <b>{{d.nouns[0]}}</b>'s <b>{{d.nouns[1]}}</b> returned, and the <b>{{d.adjectives[0]}}</b> <b>{{d.nouns[0]}}</b> became <b>{{d.adjectives[1]}}</b> again.
