Sync word list with Jing

--- a/6/kurtovic_benjamin/3-madlibs/templates/madlibs.html
+++ b/6/kurtovic_benjamin/3-madlibs/templates/madlibs.html
@@ -21,7 +21,9 @@
 		<br>
 		ocean decided to take advantage of the momentary confusion to {{d["V3"]}}
 		<br>
-		the {{d["N5"]}} in Nair. The hero {{d["P1"]}} fought hard.
+		the {{d["N6"]}} in Nair. The hero {{d["P1"]}} fought hard and ended up convincing
+		<br>
+		the {{d["N5"]}} to sign a peace treaty and Nair was at peace!!!
 	</p>
 
 </body>
