--- a/6/lin_jing/3-madlibs/templates/madlibs.html
+++ b/6/lin_jing/3-madlibs/templates/madlibs.html
@@ -3,12 +3,15 @@
         <title>COOL STORY BRO</title>
     </head>
     <body>
-        <p style="font-size:20px; margin-left:20px; margin-top:20px; width: 500px;">
-            Earlier today, {{d["P1"]}} left for a journey. Rolling down the {{d["N0"]}}, {{d["P1"]}} met a {{d["P2"]}} who attacked him.
-            He decided to {{d["V1"]}} the {{d["P2"]}}, and then {{d["N1"]}} from the sky fell on him.
-            {{d["P1"]}} {{d["V2"]}} the {{d["N2"]}}, and a rock fell on the magnificent {{d["N3"]}}, who had presided over all the {{d["N4"]}} in the kingdom of Nair.
-            Then the {{d["N5"]}} from across the ocean decided to take advantage of the momentary confusion to {{d["V3"]}} the {{d["N6"]}} in Nair.
-            The hero {{d["P1"]}} fought hard and ended up convincing the {{d["N5"]}} to sign a peace treaty, and Nair was at peace!
-        </p>
+        <div style="font-size: 20px; margin: 50px auto auto auto; width: 500px;">
+            <h1 style="text-align: center;">A COOL STORY</h1>
+            <p>
+                Earlier today, {{d["P1"]}} left for a journey. Rolling down the {{d["N0"]}}, {{d["P1"]}} met a {{d["P2"]}} who attacked him.
+                He decided to {{d["V1"]}} the {{d["P2"]}}, and then {{d["N1"]}} from the sky fell on him.
+                {{d["P1"]}} {{d["V2"]}} the {{d["N2"]}}, and a rock fell on the magnificent {{d["N3"]}}, who had presided over all the {{d["N4"]}} in the kingdom of Nair.
+                Then the {{d["N5"]}} from across the ocean decided to take advantage of the momentary confusion to {{d["V3"]}} the {{d["N6"]}} in Nair.
+                The hero {{d["P1"]}} fought hard and ended up convincing the {{d["N5"]}} to sign a peace treaty, and Nair was at peace!
+            </p>
+        </div>
     </body>
 </html>
