--- a/6/wu_jia sen/3-madlibs/templates/madlibs.html
+++ b/6/wu_jia sen/3-madlibs/templates/madlibs.html
@@ -1,23 +1,36 @@
 Mr. And Mrs. {{propernoun}}, of number four, Privet Drive, 
-were proud to say that they were perfectly normal, thank you very much. 
+were proud to say that they were perfectly {{adjective}}, thank you very much. 
+<br>
 They were the last people you'd expect to be involved in anything strange or mysterious, 
 because they just didn't hold with such nonsense. Mr. {{propernoun}} was the director of a firm called 
-Grunnings, which made drills. He was a big, beefy man with hardly any neck, 
-although he did have a very large mustache. 
+Grunnings, which made drills. 
+<br>
+He was a big, beefy man with hardly any neck, although he did have a very large mustache. 
+<br>
 Mrs. {{propernoun}} was thin and blonde and had nearly twice the usual amount of neck, which came in 
 very useful as she spent so much of her time craning over garden fences, spying on the neighbors. 
+<br>
 The {{propernoun}}s had a small son called Dudley and in their opinion there was no finer boy anywhere. 
+<br>
 The {{propernoun}}s had everything they wanted, but they also had a secret, 
 and their greatest fear was that somebody would discover it. 
+<br>
 They didn't think they could bear it if anyone found out about the Potters. 
+<br>
 Mrs. Potter was Mrs. {{propernoun}}'s sister, but they hadn't met for several years; 
 in fact, Mrs. {{propernoun}} pretended she didn't have a sister, 
-because her sister and her good-for-nothing husband were as un{{propernoun}}ish as itwas possible to be. 
-The {{propernoun}}s shuddered to think what the neighbors would say if the Potters arrived inthe street. 
+because her sister and her good-for-nothing husband were as un{{propernoun}}ish as it was possible to be. 
+<br>
+The {{propernoun}}s shuddered to think what the neighbors would say if the Potters arrived in the street.
+<br> 
 The {{propernoun}}s knew that the Potters had a small son, too, but they had never even seen him. 
+<br>
 This boy was another good reason for keeping the Potters away; 
 they didn't want Dudley mixing with a child like that. 
+<br>
 When Mr. And Mrs. {{propernoun}} woke up on the dull, gray Tuesday our story starts, 
 there was nothing about the cloudy sky outside to suggest that strange and mysterious things would 
-soon be happening all over the country. Mr. {{propernoun}} hummed as he picked out his most boring tie for work, 
+soon be happening all over the country. 
+<br>
+Mr. {{propernoun}} hummed as he picked out his most boring tie for work, 
 and Mrs. {{propernoun}} gossiped away happily as she wrestled a screaming Dudley into his high chair.
