--- a/7/duda_justin/3-madlibs/templates/index.html
+++ b/7/duda_justin/3-madlibs/templates/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <h2>Welcome to the Madlibs website</h2>
-  <h3>Please navigate to the /madlibs page</h3>
+  <h3>Please navigate to the /madlib page</h3>
 <body>
 
 </html>
