--- a/7/galasinao_nicholas/3-madlibs/templates/madlibs2.html
+++ b/7/galasinao_nicholas/3-madlibs/templates/madlibs2.html
@@ -1,4 +1,4 @@
 <h1> Hello, welcome to Madlibs </h1>
 
 
-<h3> {{d['names']}} was in the {{d['place']}} when he {{d['verb2]}} a {{d['thing']}} </h3>
+<h3> {{a['names']}} was in the {{a['place']}} when he {{a['verb2]}} a {{a['thing']}} </h3>
