Fixed capitalization error and changed urls to madlib1 and madlib2

--- a/7/burke_christopher/3-madlibs/templates/madlibs2.html
+++ b/7/burke_christopher/3-madlibs/templates/madlibs2.html
@@ -1,4 +1,4 @@
 <h1> Hello, welcome to Madlibs </h1>
 
 
-<h3> {{a['names']}} was in the {{a['place']}} when he {{a['verb2]}} a {{a['thing']}} </h3>
+<h3> {{a['NAMES']}} was in the {{a['PLACE']}} when he {{a['VERB2']}} a {{a['THING']}} </h3>
