Added Twist, Design

--- a/7/field-thompson_will/madlibs/templates/test.html
+++ b/7/field-thompson_will/madlibs/templates/test.html
@@ -1,1 +1,13 @@
-Early this morning {{name()}} woke up to the sweet, {{adjective()}} smell of {{noun()}}. {{noun()}} {{verb()}} excitedly in response.
+<style>
+body
+{
+	background-color:aquamarine;
+}
+.title
+{
+	font-family: 'Comic Sans MS',Cursive,Sans;
+	color:red;
+}
+</style>
+<div class="title"><h1> Welcome to Crazy Libs! </h1></div>
+Early this morning {{name()}} woke up to the sweet, {{adjective()}} smell of {{noun()}}. {{noun()}} {{verb()}} excitedly in response. But the smell was actually {{noun()}}, so {{name()}} {{verb()}} in frustration, and he {{verb()}} the {{adjective()}} {{noun()}}.
