Add a small edit to template

--- a/6/venderbush_sweyn/madlibs/templates/exodus.html
+++ b/6/venderbush_sweyn/madlibs/templates/exodus.html
@@ -1,5 +1,5 @@
 <h1> THE STORY OF EXODUS <h1>
-<h2> Click here to see <a href="/genesis">Genesis</a></h2>
+<h2> Click here to see the story of<a href="/genesis">genesis</a></h2>
 
 <p> When {{d.name0}} was trapped in {{d.name1}}'s land, he said "Let my people go!". But {{d.name1}} was an evil man. So he didn't "Let my people go!". In response to this {{d.adjective0}} tradgedy, {{d.name0}} decided to {{d.verb0}} to let his people {{d.verb1}}. After the {{d.adjective1}} walk to {{d.place0}}, {{d.name0}}'s people finally got to {{d.verb1}}. The end!</p>
 
