--- a/6/Cahn_David/Templates/madlib.html
+++ b/6/Cahn_David/Templates/madlib.html
@@ -5,16 +5,16 @@
 
 <p>
 
-My first paragraphDear [Word Not Submitted],
+Dear {{ name3 }} ,
 
 You are extremly {{adj1}} and I {{verb1}} you! I want to kiss your {{body_part1}} {{number1}} times. You make my {{noun1}} burn with desire. 
 When I first saw you, I {{verb2}}  at you and fell in love. Will you {{verb3}} out with me? Don`t let {{name}} discourage you, 
 they  are just jealous.
 
 Yours forever, {{name2}} 
+
 </p>
 
-http://www.madtakes.com/doglib.php?glibid=182
 </body>
 </html>
 
