--- a/7/attal_benjamin/3-madlibs/templates/lib.html
+++ b/7/attal_benjamin/3-madlibs/templates/lib.html
@@ -1,5 +1,5 @@
 <form id=form method=POST action="/results/{{file}}">
-{% for key, value in words.iteritems() %}
+{% for key, value in words %}
 <input type=text name="{{key}}" value="{{value}}"><br>
 {% endfor %}
 <input type=submit>
