--- a/login/6/greene_victoria_zhu_steve/static/login.css
+++ b/login/6/greene_victoria_zhu_steve/static/login.css
@@ -1,84 +1,79 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
- ::-webkit-input-placeholder {
-    font-weight: 300;
-    font-family:"Open Sans";
-}
+::-webkit-input-placeholder {
+  font-weight: 300;
+  font-family: "Open Sans"; }
+
 :-moz-placeholder {
-    font-weight: 300;
-    font-family:"Open Sans";
-}
+  font-weight: 300;
+  font-family: "Open Sans"; }
+
 ::-moz-placeholder {
-    font-weight: 300;
-    font-family:"Open Sans";
-}
+  font-weight: 300;
+  font-family: "Open Sans"; }
+
 :-ms-input-placeholder {
-    font-weight: 300;
-    font-family:"Open Sans";
-}
+  font-weight: 300;
+  font-family: "Open Sans"; }
+
 html, body {
-    width: 100%;
-    height: 100%;
-}
+  width: 100%;
+  height: 100%; }
+
 body {
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    background-color: #333333;
-    color: #636363;
-    font-family:"Open Sans", sans-serif;
-}
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  background-color: #333333;
+  color: #636363;
+  font-family: "Open Sans", sans-serif; }
+
 input {
-    box-sizing: border-box;
-    margin-top: 15px;
-    padding: 6px 10px;
-    width: 100%;
-    border: 1px solid #d2d9dc;
-    color: #636363;
-    font-weight: 300;
-    font-size: 14px;
-    transition: box-shadow 0.2s;
-}
-input:nth-of-type(1) {
-    margin-top: 0;
-}
-input:focus {
+  box-sizing: border-box;
+  margin-top: 15px;
+  padding: 6px 10px;
+  width: 100%;
+  border: 1px solid #d2d9dc;
+  color: #636363;
+  font-weight: 300;
+  font-size: 14px;
+  transition: box-shadow 0.2s; }
+  input:nth-of-type(1) {
+    margin-top: 0; }
+  input:focus {
     outline: none;
     border: 1px solid #74d2ff;
-    box-shadow: 0 0 3px #74d2ff;
-}
-input[type=submit] {
-    border: none;
-    background-color: #74d2ff;
-    color: white;
+    box-shadow: 0 0 3px #74d2ff; }
+  input[type=submit] {
     cursor: pointer;
-}
+    color: white;
+    background-color: #74d2ff;
+    border: none; }
+
 h1#login-title {
-    margin: 0 0 20px;
-    padding-bottom: 5px;
-    border-bottom: 1px solid lightgrey;
-    font-weight: normal;
-}
+  margin: 0 0 20px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid lightgrey;
+  font-weight: normal; }
+
 #login-outer {
-    height: 100%;
-    text-align: center;
-}
-#login-outer:before {
+  height: 100%;
+  text-align: center; }
+  #login-outer:before {
     display: inline-block;
     height: 100%;
     background-color: blue;
-    content:"";
+    content: "";
     vertical-align: middle;
-    font-size: 0;
-}
+    font-size: 0; }
+
 #login-container {
-    position: relative;
-    display: inline-block;
-    margin: 0 auto;
-    padding: 20px;
-    width: 300px;
-    border: 1px solid silver;
-    border-radius: 3px;
-    background-color: white;
-    vertical-align: middle;
-    font-size: 16px;
-}
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  margin: 0 auto;
+  padding: 20px;
+  width: 300px;
+  border: 1px solid silver;
+  border-radius: 3px;
+  background-color: white;
+  font-size: 16px; }
