--- a/login/6/greene_victoria_zhu_steve/templates/login.html
+++ b/login/6/greene_victoria_zhu_steve/templates/login.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
-</head>
-
-<body>
-    <div id="login-outer">
-        <div id="login-container">
-            <h1 id="login-title">Login</h1>
-            <form method="post">
-                <input id="username" type="username" name="username" placeholder="Username">
-                <input id="password" type="password" name="password" placeholder="Password">
-                <input type="submit" value="Login">
-            </form>
-        </div>
-    </div>
-</body>
-
-</html>
+{% extends "layout.html" %}
+{% block body %}
+	<div id="login-outer">
+	    <div id="login-container">
+	        <h1 id="login-title">Login</h1>
+	        <form method="post">
+	            <input id="username" type="username" name="username" placeholder="Username">
+	            <input id="password" type="password" name="password" placeholder="Password">
+	            <input type="submit" value="Login">
+	        </form>
+	    </div>
+	</div>
+{% endblock %}
