--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/_mixins.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/_mixins.sass
@@ -1,4 +1,4 @@
-@mixin placeholder($fontFamily, $fontWeight)
+@mixin placeholder-font($fontFamily, $fontWeight)
 	::-webkit-input-placeholder
 		font-weight: $fontWeight
 		font-family: $fontFamily
@@ -12,6 +12,13 @@
 		font-weight: $fontWeight
 		font-family: $fontFamily
 
+// Inner mixin for centering an inner block vertically and horizontally within its parent div
+@mixin center-inner
+	display: inline-block
+	vertical-align: middle
+
+// Outer mixin
+// automatically centers the first div child
 @mixin center-outer
 	height: 100%
 	text-align: center
@@ -22,7 +29,8 @@
 		content: ''
 		vertical-align: middle
 		font-size: 0
+	div:first-child
+		@include center-inner
 
-@mixin center-inner
-	display: inline-block
-	vertical-align: middle
+.center-outer
+	@include center-outer
