--- a/login/6/greene_victoria_zhu_steve/templates/login.html
+++ b/login/6/greene_victoria_zhu_steve/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-	<div id="login-outer">
+	<div class="center-outer">
 	    <div id="login-container">
 	        <h1 id="login-title">Login</h1>
 	        <form method="post">
