--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/login.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/login.sass
@@ -1,23 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800)
-@import mixins
-
 $blue: #74D2FF
-$textColor: #636363
-
-@include placeholder('Open Sans', 300)
-
-html, body
-	width: 100%
-	height: 100%
-
-body
-	position: absolute
-	margin: 0
-	padding: 0
-	// background-image: url("background.jpg")
-	background-color: #333
-	color: $textColor
-	font-family: 'Open Sans', sans-serif
 
 input
 	box-sizing: border-box
@@ -29,7 +10,7 @@ input
 	font-weight: 300
 	font-size: 14px
 	transition: box-shadow 0.2s
-	&:nth-of-type(1)
+	&:first-of-type
 		margin-top: 0
 	&:focus
 		outline: none
@@ -40,6 +21,7 @@ input
 		color: white
 		background-color: $blue
 		border: none
+		padding: 10px
 
 h1#login-title
 	margin: 0 0 20px
