--- a/login/6/kurtovic_benjamin_ye_tyrone/templates/login.html
+++ b/login/6/kurtovic_benjamin_ye_tyrone/templates/login.html
@@ -5,6 +5,9 @@
     <body>
         <h1>Login required</h1>
         <p>Don't have an account? <a href="/register">Register</a>.</p>
+        {% if error %}
+            <p>Error: {{error}}</p>
+        {% endif %}
         <form method="POST">
             <table>
                 <tr><td>Username:</td><td><input type="text" name="username"></td>
