--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/_mixins.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/_mixins.sass
@@ -1,3 +1,10 @@
+@mixin vendor($property, $value)
+	-webkit-#{$property}: $value
+	-moz-#{$property}: $value
+	-ms-#{$property}: $value
+	-o-#{$property}: $value
+	#{$property}: $value
+
 @mixin placeholder-font($fontFamily, $fontWeight)
 	::-webkit-input-placeholder
 		font-weight: $fontWeight
