--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
@@ -12,3 +12,13 @@ body
 	background-color: $backgroundColor
 	color: $textColor
 	font-family: 'Open Sans', sans-serif
+
+.button, input[type=submit]
+	@include vendor(transition, background-color 0.2s)
+	cursor: pointer
+	color: white
+	background-color: $blue
+	border: 1px solid transparent
+	padding: 10px
+	&:hover
+		background-color: #45C3FF
