--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/variables.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/variables.sass
@@ -1,2 +1,6 @@
-$textColor: #636363
-$backgroundColor: #333
+$blue: #74D2FF
+$lightgray: #636363
+$darkgray: #333
+
+$textColor: $lightgray
+$backgroundColor: $darkgray
