--- a/login/6/greene_victoria_zhu_steve/templates/login.html
+++ b/login/6/greene_victoria_zhu_steve/templates/login.html
@@ -7,7 +7,7 @@
 	            <form method="post">
 	                <input id="username" type="username" name="username" placeholder="Username">
 	                <input id="password" type="password" name="password" placeholder="Password">
-	                <input type="submit" value="Login">
+	                <input class="button" type="submit" value="Login">
 	            </form>
 	        </div>
 	        <a id="login-register-link" href="{{ url_for('register') }}">Don't have an account? Register here.</a>
