--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/application.css
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/application.css
@@ -40,28 +40,48 @@ body {
   color: #636363;
   font-family: "Open Sans", sans-serif; }
 
+.button, input[type=submit] {
+  -webkit-transition: background-color 0.2s;
+  -moz-transition: background-color 0.2s;
+  -ms-transition: background-color 0.2s;
+  -o-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+  cursor: pointer;
+  color: white;
+  background-color: #74d2ff;
+  border: 1px solid transparent;
+  padding: 10px; }
+  .button:hover, input[type=submit]:hover {
+    background-color: #45c3ff; }
+
 input {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-transition: box-shadow 0.2s;
+  -moz-transition: box-shadow 0.2s;
+  -ms-transition: box-shadow 0.2s;
+  -o-transition: box-shadow 0.2s;
+  transition: box-shadow 0.2s;
   margin-top: 15px;
   padding: 6px 10px;
   width: 100%;
   border: 1px solid #d2d9dc;
   color: #636363;
   font-weight: 300;
-  font-size: 14px;
-  transition: box-shadow 0.2s; }
+  font-size: 14px; }
   input:first-of-type {
     margin-top: 0; }
   input:focus {
+    -webkit-box-shadow: 0 0 3px #74d2ff;
+    -moz-box-shadow: 0 0 3px #74d2ff;
+    -ms-box-shadow: 0 0 3px #74d2ff;
+    -o-box-shadow: 0 0 3px #74d2ff;
+    box-shadow: 0 0 3px #74d2ff;
     outline: none;
-    border: 1px solid #74d2ff;
-    box-shadow: 0 0 3px #74d2ff; }
-  input[type=submit] {
-    cursor: pointer;
-    color: white;
-    background-color: #74d2ff;
-    border: none;
-    padding: 10px; }
+    border: 1px solid #74d2ff; }
 
 h1#login-title {
   margin: 0 0 20px;
@@ -70,12 +90,16 @@ h1#login-title {
   font-weight: normal; }
 
 #login-container {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
   position: relative;
   margin: 0 auto;
   padding: 20px;
   width: 300px;
   border: 1px solid silver;
-  border-radius: 3px;
   background-color: white;
   font-size: 16px; }
 
