--- a/login/6/kurtovic_benjamin_ye_tyrone/templates/register.html
+++ b/login/6/kurtovic_benjamin_ye_tyrone/templates/register.html
@@ -1,11 +1,14 @@
 <html>
     <head>
         <title>Register</title>
+        <style>
+            body { font-family: sans-serif; }
+        </style>
     </head>
     <body>
         <h1>Register</h1>
         {% if error %}
-            <p>Error:
+            <p><span style="color: red;">Error</span>:
             {% if error == "missing" %}
                 Missing a username or password.
             {% elif error == "exists" %}
