--- a/login/6/kurtovic_benjamin_ye_tyrone/templates/index.html
+++ b/login/6/kurtovic_benjamin_ye_tyrone/templates/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Home</title>
+        <style>
+            body { font-family: sans-serif; }
+        </style>
     </head>
     <body>
         <h1>Welcome, {{username}}!</h1>
