Line statement, variable start,end

--- a/login/6/greene_victoria_zhu_steve/templates/register.html
+++ b/login/6/greene_victoria_zhu_steve/templates/register.html
@@ -1,5 +1,15 @@
-{% extends "layout.html" %}
-{% block body %}
+= extends "layout.html"
+= block title
+	Register
+= endblock
+= block body
 	<div id="register-container">
+		<form method="post">
+			<label>Username</label>
+			<input>
+			<label>Password</label>
+			<input>
+			<label>Confirm Password</label>
+		</form>
 	</div>
-{% endblock %}
+= endblock
