--- a/login/6/greene_victoria_zhu_steve/templates/layout.html
+++ b/login/6/greene_victoria_zhu_steve/templates/layout.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>{{ title }}</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/application.css') }}">
+    <title>
+    	= block title
+    	= endblock
+    </title>
+    <link rel="stylesheet" type="text/css" href="#{ url_for('static', filename='stylesheets/application.css') }">
 </head>
-
 <body>
-    {% block body %} {% endblock %}
+	= block body
+	= endblock
 </body>
-
 </html>
