--- a/login/6/greene_victoria_zhu_steve/templates/login.html
+++ b/login/6/greene_victoria_zhu_steve/templates/login.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %}
-{% block body %}
+= extends "layout.html"
+= block title
+	Login
+= endblock
+= block body
 	<div class="center-outer">
 	    <span id="login-outer">
 	        <div id="login-container">
@@ -10,7 +13,7 @@
 	                <input class="button" type="submit" value="Login">
 	            </form>
 	        </div>
-	        <a id="login-register-link" href="{{ url_for('register') }}">Don't have an account? Register here.</a>
+	        <a id="login-register-link" href="#{ url_for('register') }">Don't have an account? Register here.</a>
 	    </span>
 	</div>
-{% endblock %}
+= endblock
