--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/login.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/login.sass
@@ -1,42 +1,3 @@
-input
-	@include vendor(box-sizing, border-box)
-	@include vendor(transition, box-shadow 0.2s)
-	margin-top: 15px
-	padding: 6px 10px
-	width: 100%
-	border: 1px solid #D2D9DC
-	color: $textColor
-	font-weight: 300
-	font-size: 14px
-	&:first-of-type
-		margin-top: 0
-	&:focus
-		@include vendor(box-shadow, 0 0 3px $blue)
-		outline: none
-		border: 1px solid $blue
-
-h1#login-title
-	margin: 0 0 20px
-	padding-bottom: 5px
-	border-bottom: 1px solid lightgray
-	font-weight: normal
-
 #login-container
-	@include vendor(border-radius, 3px)
-	position: relative
-	margin: 0 auto
-	padding: 20px
+	@extend .outer-container
 	width: 300px
-	border: 1px solid #C0C0C0
-	background-color: white
-	font-size: 16px
-
-a#login-register-link
-	display: inline-block
-	margin-top: 10px
-	border-bottom: 1px dotted $textColor
-	color: $textColor
-	font-size: 14px
-	text-decoration: none
-	&:hover
-		border-bottom-style: solid
