--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/_mixins.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/_mixins.sass
@@ -35,7 +35,7 @@
 		content: ''
 		vertical-align: middle
 		font-size: 0
-	span:first-child
+	& > span:first-child
 		@include center-inner
 
 .center-outer
