--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
@@ -13,6 +13,23 @@ body
 	color: $textColor
 	font-family: 'Open Sans', sans-serif
 
+input
+	@include vendor(box-sizing, border-box)
+	@include vendor(transition, box-shadow 0.2s)
+	margin-top: 15px
+	padding: 6px 10px
+	width: 100%
+	border: 1px solid #D2D9DC
+	color: $textColor
+	font-weight: 300
+	font-size: 14px
+	&:first-of-type
+		margin-top: 0
+	&:focus
+		@include vendor(box-shadow, 0 0 3px $blue)
+		outline: none
+		border: 1px solid $blue
+
 .button, input[type=submit]
 	@include vendor(transition, background-color 0.2s)
 	cursor: pointer
@@ -22,3 +39,28 @@ body
 	padding: 10px
 	&:hover
 		background-color: #45C3FF
+
+.outer-container
+	@include vendor(border-radius, 3px)
+	margin: 0 auto
+	padding: 20px
+	border: 1px solid #C0C0C0
+	background-color: white
+	font-size: 16px
+
+.title
+	margin: 0 0 20px
+	padding-bottom: 5px
+	border-bottom: 1px solid lightgray
+	font-weight: normal
+
+// link to Register/Login page
+a.bottom-link
+	display: inline-block
+	margin-top: 10px
+	border-bottom: 1px dotted $textColor
+	color: $textColor
+	font-size: 14px
+	text-decoration: none
+	&:hover
+		border-bottom-style: solid
