--- a/login/6/greene_victoria_zhu_steve/templates/login.html
+++ b/login/6/greene_victoria_zhu_steve/templates/login.html
@@ -6,14 +6,14 @@
 	<div class="center-outer">
 	    <span id="login-outer">
 	        <div id="login-container">
-	            <h1 id="login-title">Login</h1>
+	            <h1 class="title">Login</h1>
 	            <form method="post">
 	                <input id="username" type="username" name="username" placeholder="Username">
 	                <input id="password" type="password" name="password" placeholder="Password">
 	                <input class="button" type="submit" value="Login">
 	            </form>
 	        </div>
-	        <a id="login-register-link" href="#{ url_for('register') }">Don't have an account? Register here.</a>
+	        <a class="bottom-link" href="#{ url_for('register') }">Don't have an account? Register here.</a>
 	    </span>
 	</div>
 = endblock
