Edited passwords to be hidden instead of visible, basic inputs in register page

--- a/7/burke_christopher/5-login/templates/register.html
+++ b/7/burke_christopher/5-login/templates/register.html
@@ -1,1 +1,11 @@
 <h1> Register Page </h1>
+
+<form method = "POST">
+
+Username: <input type="text" name="username" value=""><br>
+Password: <input type="password" name="password" value=""><br>
+Re-type Password: <input type="password" name="passwordretype" value =""><br>
+
+<input type="submit" name="button" value="Register">
+
+</form>
