--- a/7/burke_christopher/5-login/templates/login.html
+++ b/7/burke_christopher/5-login/templates/login.html
@@ -7,9 +7,9 @@
 
 
 <form method="POST">
-
+""
 Username: <input type="text" name="username" value="">
-Password: <input type="text" name="password" value="">
+Password: <input type="password" name="password" value="">
 
 <input type="submit" name="button" value="Login">
 
