--- a/login/6/ahn_jae_venderbush_sweyn/templates/login.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/login.html
@@ -3,33 +3,16 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
+  <title>Login</title>
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="1187.39">
   <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Helvetica}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #dd1144; background-color: #ffffff}
-    span.s1 {font: 12.0px Helvetica; color: #000000; background-color: transparent}
-    span.s2 {color: #000080}
-    span.s3 {color: #333333}
-    span.s4 {color: #008080}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times}
+    span.s1 {text-decoration: underline ; color: #0000ee}
   </style>
 </head>
 <body>
-<p class="p1">html&gt;</p>
-<p class="p1">&lt;head&gt;</p>
-<p class="p1">&lt;title&gt; Login &lt;/title&gt;</p>
-<p class="p1">&lt;style&gt;<span class="Apple-converted-space"> </span></p>
-<p class="p2">&lt;link rel="stylesheet" type="text/css" href="#{ url_for('static', filename='stylesheets/login.css') }"&gt;</p>
-<p class="p2">&lt;/head&gt;</p>
-<p class="p2">&lt;body&gt;<span class="Apple-converted-space"> </span></p>
-<p class="p2">&lt;h1&gt; Please login. &lt;/h1&gt;<span class="Apple-converted-space"> </span></p>
-<p class="p3"><span class="s1">&lt;p&gt; Username: </span><span class="s2">&lt;input</span><span class="s3"> </span><span class="s4">type=</span>"text"<span class="s3"> </span><span class="s4">name=</span>"username"<span class="s2">&gt;</span></p>
-<p class="p2">&lt;/p&gt;</p>
-<p class="p2">&lt;p&gt; Password: &lt;input type: "text" name="password"&gt;<span class="Apple-converted-space"> </span></p>
-<p class="p2">&lt;/p&gt;<span class="Apple-converted-space"> </span></p>
-<p class="p2">&lt;/body&gt;</p>
-<p class="p2">&lt;/html&gt;<span class="Apple-converted-space"> </span></p>
+<h1 style="margin: 0.0px 0.0px 16.0px 0.0px; font: 24.0px Times"><b>Please login.</b></h1>
+<p class="p2">Username: Password: Don't have one? Register here. <a href="file:///register"><span class="s1">Register</span></a></p>
 </body>
 </html>
