Add updates to templates

--- a/login/6/ahn_jae_venderbush_sweyn/templates/register.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/register.html
@@ -9,7 +9,7 @@
 <body> 
 <h1> Our program allows you to access the tools you need for an everyday Stuyvesant student. </h1>
 <h2> Please input your information in order to get access to our wonderful utility. </h2> 
-
+<form method = "post">
 Username you would like: <input type = "text" name = "username"></input>
 And the password: <input type = "text" name="password"></input> 
 
