--- a/login/6/chen_simon_tang_derek/templates/login.html
+++ b/login/6/chen_simon_tang_derek/templates/login.html
@@ -9,5 +9,5 @@
   <br>
   <input type ="submit" name = "button" value = "Login">
   <input type ="submit" name = "button" value = "Cancel">
-  <input type ="submit" name = "button" value = "Register">
+  <a href="\register"><span class="s1">Register</span></a>
 </form>
