--- a/login/6/chen_simon_tang_derek/templates/register.html
+++ b/login/6/chen_simon_tang_derek/templates/register.html
@@ -10,6 +10,7 @@ Confirm Password: <input type = "text" name = "confirmpassword">
 <br>
 <input type = "submit" name = "button" value= "Submit">
 <input type = "submit" name = "button" value= "Cancel">
+<a href="\login"><span class="s1">Back To Login</span></a>
 
 </form>
 
